--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,1 +1,4 @@
-404?
+{{ define "main" }}
+  <p>You're logged in as <strong>admin</strong>.</p>
+  <p>Just kidding. This page does not exist (404).</p>
+{{ end }}
