Author and description meta tags

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,6 +1,8 @@
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>{{- .Title }} - {{ .Site.Title -}}</title>
+<meta name="author" content="{{ .Site.Author.name }}">
+<meta name="description" content="{{ .Site.Params.description }}">
 
 {{ .Hugo.Generator }}
 
