--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,7 +1,8 @@
 <footer>
-  {{ if $.Site.Params.creativeCommonsLicence }}
-    <a rel="license" href="http://creativecommons.org/licenses/{{ $.Site.Params.creativeCommonsLicence }}/">
-      <img alt="Creative Commons License" src="https://i.creativecommons.org/l/{{ $.Site.Params.creativeCommonsLicence }}/80x15.png">
-    </a>
-  {{ end }}
+  <div class="powered-by">
+    Powered by <a href="https://gohugo.io">Hugo</a> &amp; <a href="https://github.com/eshlox/simplicity">Simplicity</a>.
+  </div>
+  <div class="copyright">
+    &copy; {{ now.Format "2006" }} {{ $.Site.Author.name }}.{{ if .Site.Params.licence }} {{ $.Site.Params.licence | markdownify }}{{ end }}
+  </div>
 </footer>
