Added mobile media query breakpoint to the settings

--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -1,11 +1,12 @@
 // General
 $base-font-size: 20px;
 $base-line-height: 1.5;
-$page-max-width: 60rem;
-$padding-left-right: 1rem;
-$navbarHeight: 2rem;
 $footerHeight: 2rem;
 $itemMargin: 2rem;
+$navbarHeight: 2rem;
+$mobileBreakpoint: 50rem;
+$padding-left-right: 1rem;
+$page-max-width: 60rem;
 
 // Colors
 $color-black: #000;
