--- a/src/styles/_components/footer.scss
+++ b/src/styles/_components/footer.scss
@@ -5,7 +5,7 @@ footer {
   line-height: 1;
   padding: 0 $padding-left-right;
 
-  @media (max-width: 50rem) {
+  @media (max-width: $mobileBreakpoint) {
     text-align: center;
   }
 
@@ -23,7 +23,7 @@ footer {
     &.powered-by {
       grid-row-start: 2;
 
-      @media (min-width: 50rem) {
+      @media (min-width: $mobileBreakpoint) {
         grid-column: 1;
         grid-row-start: unset;
         justify-self: start;
@@ -33,7 +33,7 @@ footer {
     &.copyright {
       grid-row-start: 1;
 
-      @media (min-width: 50rem) {
+      @media (min-width: $mobileBreakpoint) {
         grid-column: 2;
         grid-row-start: unset;
         justify-self: end;
