Add a title to URLs in the footer

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <footer>
   <div class="powered-by">
-    Powered by <a href="https://gohugo.io">Hugo</a> &amp; <a href="https://github.com/eshlox/simplicity">Simplicity</a>.
+    Powered by <a href="https://gohugo.io" title="A Fast and Flexible Website Generator">Hugo</a> &amp; <a href="https://github.com/eshlox/simplicity" title="Hugo theme">Simplicity</a>.
   </div>
   <div class="copyright">
     &copy; {{ now.Format "2006" }} {{ $.Site.Author.name }}.{{ if .Site.Params.licence }} {{ $.Site.Params.licence | markdownify }}{{ end }}
