Google Adsense - first draft

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -27,6 +27,7 @@
       </p>
     </header>
     <section>
+      {{ partial "adsense.html" . }}
       {{- .Content -}}
     </section>
     <footer>
