--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,6 +4,7 @@
 
 @import "mixins";
 
+@import "_components/adsense";
 @import "_components/base";
 @import "_components/content";
 @import "_components/footer";
