--- a/layouts/partials/adsense.html
+++ b/layouts/partials/adsense.html
@@ -1,14 +1,16 @@
 {{ if and .Site.Params.adsenseDataAdClient .Site.Params.adsenseDataAdSlot }}
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  <ins
-    class="adsbygoogle example_responsive_1"
-    style="display:block"
-    data-ad-client="{{ $.Site.Params.adsenseDataAdClient }}"
-    data-ad-slot="{{ $.Site.Params.adsenseDataAdSlot }}"
-    data-ad-format="auto"
-  >
-  </ins>
+  <div class="adsense">
+    <ins
+      class="adsbygoogle"
+      style="display:inline-block;min-width:300px;max-width:970px;width:100%;height:90px"
+      data-ad-client="{{ $.Site.Params.adsenseDataAdClient }}"
+      data-ad-slot="{{ $.Site.Params.adsenseDataAdSlot }}"
+      data-ad-format="auto"
+    >
+    </ins>
+  </div>
   <script>
-  (adsbygoogle = window.adsbygoogle || []).push({});
+    (adsbygoogle = window.adsbygoogle || []).push({});
   </script>
 {{ end }}
