--- a/src/styles/_components/adsense.scss
+++ b/src/styles/_components/adsense.scss
@@ -1,9 +1,12 @@
-ins.adsbygoogle {
-  // margin-bottom: 3rem;
-  display: block;
-  margin: 0 auto 3rem auto;
-}
+.adsense {
+  text-align: center;
 
-.example_responsive_1 { width: 320px; height: 100px; }
-@media(min-width: 500px) { .example_responsive_1 { width: 468px; height: 60px; } }
-@media(min-width: 900px) { .example_responsive_1 { width: 728px; height: 90px; } }
+  ins.adsbygoogle {
+    line-height: 1;
+    margin: 0 auto 3rem auto;
+
+    @media (max-width: 550px) {
+      margin: 0 auto 1.5rem auto;
+    }
+  }
+}
