--- a/src/styles/_components/post.scss
+++ b/src/styles/_components/post.scss
@@ -21,6 +21,10 @@ article {
 
   section {
     margin: 3rem 0;
+
+    @media (max-width: 550px) {
+      margin: 1.5rem 0;
+    }
   }
 
   footer {
