--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -31,6 +31,9 @@
       {{- .Content -}}
     </section>
     <footer>
+      {{ if .Site.Params.addThisId }}
+        <div class="addthis_inline_share_toolbox"></div>
+      {{ end }}
       {{ template "_internal/disqus.html" . }}
     </footer>
   </article>
