--- a/layouts/page/single.html
+++ b/layouts/page/single.html
@@ -1,5 +1,7 @@
 {{ define "main" }}
-  <div class="page-content">
-    {{ .Content }}
-  </div>
+  <article>
+    <section>
+      {{ .Content }}
+    </section>
+  </article>
 {{ end }}
