--- a/src/styles/_components/adsense.scss
+++ b/src/styles/_components/adsense.scss
@@ -1,12 +1,12 @@
-.adsense {
-  text-align: center;
-
-  ins.adsbygoogle {
-    line-height: 1;
-    margin: 0 auto 3rem auto;
-
-    @media (max-width: 550px) {
-      margin: 0 auto 1.5rem auto;
-    }
-  }
-}
+//.adsense {
+//  text-align: center;
+//
+//  ins.adsbygoogle {
+//    line-height: 1;
+//    margin: 0 auto 3rem auto;
+//
+//    @media (max-width: 550px) {
+//      margin: 0 auto 1.5rem auto;
+//    }
+//  }
+//}
