--- a/src/styles/_components/homepage.scss
+++ b/src/styles/_components/homepage.scss
@@ -1,12 +1,12 @@
-.homepage {
-  padding: 0 $padding-left-right;
-
-  .avatar {
-    border-radius: 50%;
-  }
-
-  hr {
-    margin-bottom: 1rem;
-    margin-top: 1rem;
-  }
-}
+//.homepage {
+//  padding: 0 $padding-left-right;
+//
+//  .avatar {
+//    border-radius: 50%;
+//  }
+//
+//  hr {
+//    margin-bottom: 1rem;
+//    margin-top: 1rem;
+//  }
+//}
