--- a/src/styles/_components/links.scss
+++ b/src/styles/_components/links.scss
@@ -1,8 +1,8 @@
-a {
-  color: $color-dodger-blue;
-  text-decoration: none;
-
-  &:hover, &:active, &:visited {    
-    text-decoration: underline;
-  }
-}
+//a {
+//  color: $color-dodger-blue;
+//  text-decoration: none;
+//
+//  &:hover, &:active, &:visited {
+//    text-decoration: underline;
+//  }
+//}
