--- a/layouts/_default/taxonomy.html
+++ b/layouts/_default/taxonomy.html
@@ -1,26 +1,16 @@
 {{ define "main" }}
-  <div class="taxonomies-list">
-    <h2>
-      <span>{{ i18n "postsAbout" }}</span> {{ .Title }}
+  <h2>
+    {{ i18n "postsAbout" }} {{ .Title }}
+    <div class="svg-icon baseline">
       <a href="{{ .RSSLink | relURL }}" title="RSS">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="24"
-          height="24"
-          viewBox="0 0 24 24"
-          fill="none"
-          stroke="currentColor"
-          stroke-width="2"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          class="rss"
-        >
-          <path d="M4 11a9 9 0 0 1 9 9" />
-          <path d="M4 4a16 16 0 0 1 16 16" />
-          <circle cx="5" cy="19" r="1" />
+        <svg fill="#000000" height="48" viewBox="0 0 24 24" width="48" xmlns="http://www.w3.org/2000/svg">
+          <path d="M0 0h24v24H0z" fill="none"/>
+          <circle cx="6.18" cy="17.82" r="2.18"/>
+          <path d="M4 4.44v2.83c7.03 0 12.73 5.7 12.73 12.73h2.83c0-8.59-6.97-15.56-15.56-15.56zm0 5.66v2.83c3.9 0 7.07 3.17 7.07 7.07h2.83c0-5.47-4.43-9.9-9.9-9.9z"/>
         </svg>
       </a>
-    </h2>
-    {{ partial "posts_list.html" . }}
-  </div>
+    </div>
+  </h2>
+  <hr>
+  {{ partial "posts_list.html" . }}
 {{ end }}
