--- a/layouts/shortcodes/vimeo.html
+++ b/layouts/shortcodes/vimeo.html
@@ -1,8 +1,9 @@
-<div style="left: 0; width: 100%; height: 0; position: relative; padding-bottom: 56.2493%;">
-  <iframe
-    src="https://player.vimeo.com/video/{{ .Get 0 }}?byline=0&badge=0&portrait=0&title=0"
-    style="border: 0; top: 0; left: 0; width: 100%; height: 100%; position: absolute;"
-    allowfullscreen
-    scrolling="no"
-  ></iframe>
-</div>
+<iframe
+  src="https://player.vimeo.com/video/{{ .Get 0 }}?byline=0&badge=0&portrait=0&title=0"
+  width="640"
+  height="360"
+  frameborder="0"
+  webkitallowfullscreen
+  mozallowfullscreen
+  allowfullscreen
+></iframe>
