--- a/src/styles/_components/content.scss
+++ b/src/styles/_components/content.scss
@@ -1,8 +1,8 @@
-main {
-  justify-self: center;
-  margin-bottom: 1rem;
-  margin-top: 1rem;
-  max-width: $page-max-width;
-  min-width: 0;
-  width: 100%;
-}
+//main {
+//  justify-self: center;
+//  margin-bottom: 1rem;
+//  margin-top: 1rem;
+//  max-width: $page-max-width;
+//  min-width: 0;
+//  width: 100%;
+//}
