--- a/src/styles/_components/pagination.scss
+++ b/src/styles/_components/pagination.scss
@@ -1,13 +1,13 @@
-.pagination {
-  padding: 0 $padding-left-right;
-
-  align-items: center;
-  display: flex;
-  justify-content: space-between;
-  margin-top: 1.5rem;
-
-  li {
-    display: inline;
-    list-style: none;
-  }
-}
+//.pagination {
+//  padding: 0 $padding-left-right;
+//
+//  align-items: center;
+//  display: flex;
+//  justify-content: space-between;
+//  margin-top: 1.5rem;
+//
+//  li {
+//    display: inline;
+//    list-style: none;
+//  }
+//}
