--- a/src/styles/_components/taxonomies.scss
+++ b/src/styles/_components/taxonomies.scss
@@ -1,10 +1,10 @@
-.taxonomies {
-  padding: 0 $padding-left-right;
-
-  ul {
-    li {
-      color: $color-silver;
-      list-style-type: decimal;
-    }
-  }
-}
+//.taxonomies {
+//  padding: 0 $padding-left-right;
+//
+//  ul {
+//    li {
+//      color: $color-silver;
+//      list-style-type: decimal;
+//    }
+//  }
+//}
