--- a/src/styles/_components/taxonomies_list.scss
+++ b/src/styles/_components/taxonomies_list.scss
@@ -1,26 +1,26 @@
-.taxonomies-list {
-  padding: 0 $padding-left-right;
-
-  h2 {
-    margin-bottom: 2rem;
-    text-align: center;
-
-    span {
-      color: $color-silver;
-    }
-
-    a {
-      padding: 0 0.5rem;
-
-      svg {
-        height: 1rem;
-        width: 1rem;
-        vertical-align: middle;
-
-        &.rss {
-          color: $color-rss;
-        }
-      }
-    }
-  }
-}
+//.taxonomies-list {
+//  padding: 0 $padding-left-right;
+//
+//  h2 {
+//    margin-bottom: 2rem;
+//    text-align: center;
+//
+//    span {
+//      color: $color-silver;
+//    }
+//
+//    a {
+//      padding: 0 0.5rem;
+//
+//      svg {
+//        height: 1rem;
+//        width: 1rem;
+//        vertical-align: middle;
+//
+//        &.rss {
+//          color: $color-rss;
+//        }
+//      }
+//    }
+//  }
+//}
