--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,18 +1,18 @@
-@mixin shadow($border-radius, $width) {
-  border-radius: 1%;
-  box-shadow: 2px 2px 8px 0px rgba(0,0,0,0.75);
-  display: block;
-
-  @if $border-radius {
-    border-radius: $border-radius;
-  }
-
-  @if $width {
-    max-width: $width;
-  }
-}
-
-@mixin paragraph-margin($margin) {
-  margin-bottom: $margin;
-  margin-top: $margin * 2;
-}
+//@mixin shadow($border-radius, $width) {
+//  border-radius: 1%;
+//  box-shadow: 2px 2px 8px 0px rgba(0,0,0,0.75);
+//  display: block;
+//
+//  @if $border-radius {
+//    border-radius: $border-radius;
+//  }
+//
+//  @if $width {
+//    max-width: $width;
+//  }
+//}
+//
+//@mixin paragraph-margin($margin) {
+//  margin-bottom: $margin;
+//  margin-top: $margin * 2;
+//}
