--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,23 +1,23 @@
 @import "~node-normalize-scss/normalize";
 
-@import "settings";
+//@import "settings";
 
-@import "mixins";
+//@import "mixins";
 
-@import "_components/adsense";
+//@import "_components/adsense";
 @import "_components/base";
-@import "_components/content";
-@import "_components/footer";
-@import "_components/homepage";
-@import "_components/links";
-@import "_components/navbar";
-@import "_components/page";
-@import "_components/pagination";
-@import "_components/post";
-@import "_components/posts_list";
-@import "_components/taxonomies";
-@import "_components/taxonomies_list";
-@import "_components/typography";
+//@import "_components/content";
+//@import "_components/footer";
+//@import "_components/homepage";
+//@import "_components/links";
+//@import "_components/navbar";
+//@import "_components/page";
+//@import "_components/pagination";
+//@import "_components/post";
+//@import "_components/posts_list";
+//@import "_components/taxonomies";
+//@import "_components/taxonomies_list";
+//@import "_components/typography";
 
 @import "chroma_native";
 
