CSS and HTML improvements

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -32,10 +32,10 @@
           {{ end }}
         </p>
       </div>
-      {{ if .Site.Params.addThisId }}
-        <hr>
-        <div class="addthis_inline_share_toolbox"></div>
-      {{ end }}
+      <!--{{ if .Site.Params.addThisId }}-->
+        <!--<hr>-->
+        <!--<div class="addthis_inline_share_toolbox"></div>-->
+      <!--{{ end }}-->
       <hr>
       {{ template "_internal/disqus.html" . }}
     </footer>
