--- a/layouts/partials/posts_list.html
+++ b/layouts/partials/posts_list.html
@@ -1,40 +1,20 @@
 <h1>{{ i18n "postsList" . }}</h1>
 
-{{ if .Site.Params.pagination }}
-
-  <ul class="post-list">
-    {{ $paginator := .Paginate (where .Data.Pages "Type" "posts") }}
-    {{ range $paginator.Pages }}
-      <a href="{{ .Permalink | relURL }}" title="{{ .Title }}">
-        <li>
-          <span>{{ .Title }}</span>
-          <span class="date">{{ .Date.Format "2006-01-02" }}</span>
-        </li>
-      </a>
+{{ range (where .Data.Pages "Type" "posts").GroupByDate "2006" }}
+  <h2 id="{{ .Key }}">
+    <div class="svg-icon baseline">
+      <svg fill="#000000" height="48" viewBox="0 0 24 24" width="48" xmlns="http://www.w3.org/2000/svg">
+        <path d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"/>
+        <path d="M0 0h24v24H0z" fill="none"/>
+      </svg>
+    </div>
+    {{ .Key }}
+  </h2>
+  <ol class="decimal-list">
+    {{ range .Pages }}
+      <li>
+        <a href="{{ .Permalink | relURL }}" title="{{ .Title }}">{{ .Title }}</a>
+      </li>
     {{ end }}
-  </ul>
-
-  {{ partial "pagination.html" . }}
-
-{{ else }}
-
-  {{ range (where .Data.Pages "Type" "posts").GroupByDate "2006" }}
-    <h2 id="{{ .Key }}">
-      <div class="svg-icon baseline">
-        <svg fill="#000000" height="48" viewBox="0 0 24 24" width="48" xmlns="http://www.w3.org/2000/svg">
-          <path d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"/>
-          <path d="M0 0h24v24H0z" fill="none"/>
-        </svg>
-      </div>
-      {{ .Key }}
-    </h2>
-    <ol class="grey-labels">
-      {{ range .Pages }}
-        <li>
-          <a href="{{ .Permalink | relURL }}" title="{{ .Title }}">{{ .Title }}</a>
-        </li>
-      {{ end }}
-    </ol>
-  {{ end }}
-
+  </ol>
 {{ end }}
