--- a/layouts/shortcodes/youtube.html
+++ b/layouts/shortcodes/youtube.html
@@ -1,7 +1,8 @@
-<iframe
-  src="//www.youtube.com/embed/{{ .Get 0 }}?rel=0&showinfo=0"
-  width="560"
-  height="315"
-  frameborder="0"
-  allowfullscreen
-></iframe>
+<div style="left: 0; width: 100%; height: 0; position: relative; padding-bottom: 56.2493%;">
+  <iframe
+    src="https://www.youtube.com/embed/{{ .Get 0 }}?rel=0&showinfo=0"
+    style="border: 0; top: 0; left: 0; width: 100%; height: 100%; position: absolute;"
+    allowfullscreen
+    scrolling="no"
+  ></iframe>
+</div>
