--- a/src/styles/_components/content.scss
+++ b/src/styles/_components/content.scss
@@ -125,10 +125,11 @@ body {
             }
         }
 
-        //video {
-        //  display: block;
-        //  margin: 4rem auto;
-        //}
+        video {
+          display: block;
+          margin: 4rem auto;
+          width: 100%
+        }
 
         //.youtube {
         //  border: 0;
