--- a/layouts/shortcodes/video.html
+++ b/layouts/shortcodes/video.html
@@ -1,4 +1,8 @@
-<video width="800" height="600" controls>
-  <source src="{{ .Get 0 }}" type="video/mp4">
+{{ $src := (.Get "src") }}
+{{ $width := (.Get "width") }}
+{{ $height := (.Get "height") }}
+
+<video{{ if $width }} width="{{ $width }}"{{ end }}{{ if $height }} height="{{ $height }}"{{end}} controls>
+  <source src="{{ $src | relURL }}" type="video/mp4">
   Your browser does not support the video tag.
 </video>
