--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,6 +2,7 @@
 
 @import "settings";
 
+@import "_components/adsense";
 @import "_components/base";
 @import "_components/content";
 @import "_components/elements";
